--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-//@import "../node_modules/angular/angular-csp";
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic");
 
 .blue-background{
   background-color: red;
