--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,57 @@
 @import url("http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic");
 
-.blue-background{
-  background-color: red;
+html, body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+md-toolbar h1 {
+  font-size: 1.250em;
+  font-weight: 400;
+  margin: auto;
+}
+
+md-toolbar .md-toolbar-tools h1 {
+  font-size: 1.25em;
+  font-weight: 400;
+}
+
+md-list .md-button {
+  color: inherit;
+  font-weight: 500;
+  text-align: left;
+  width: 100%;
+}
+
+md-list .md-button.selected {
+  color: #03a9f4;
+}
+
+md-sidenav md-list {
+  padding: 0px 0px 8px 0px;
+}
+
+#content {
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 5px;
+}
+
+.avatar {
+  position: relative;
+  width: 128px;
+  height: 128px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0px;
+  vertical-align: middle;
+  zoom: 0.70;
+  transform: translateZ(0);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.07);
 }
